<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eastworld_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for EastWorld Autonomy Stack: configs and launch files (Livox Mid-360, SPARK-FAST-LIO, PX4). Keeps customizations separate from upstream repos.</description>
  <maintainer email="shoonkit@virtuals.io">EastWorld's Janitor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>spark_fast_lio</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
