<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eastworld_camera</name>
  <version>0.1.0</version>
  <description>
    CSI camera streamer for Jetson — HW-accelerated H.264/JPEG to Foxglove.
    Uses nvarguscamerasrc + NVENC, publishes compressed frames for
    Foxglove Bridge to relay over WiFi with minimal bandwidth.
  </description>
  <maintainer email="shoonkit@virtuals.io">EastWorld's Janitor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>foxglove_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
